Migrated the about page to an atomic structure
